test/expected/declare_nmo_arrow_rk_pk.out
struct S; declare -> as non-member operator (reference to S) returning point...
         ^
10: error: operator -> can only be a member
